[package]
name = "rocket"
version = "0.1.0"
authors = ["Andrew Aldridge <i80and@foxquill.com>"]

[dependencies]
argparse = "0.2.1"
glob = "0.2.11"
handlebars = "0.29.1"
lazy_static = "0.2.9"
lazycell = "0.5.1"
log = "0.3.8"
rand = "0.3"
regex = "0.2.2"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
simple_logger = "0.4.0"
time = "0.1"
toml = "0.4"
typed-arena = "1.3.0"
walkdir = "1.0.7"

[dependencies.comrak]
version = "0.1.9"
default-features = false

[dependencies.syntect]
version = "1.7.3"
default-features = false
features = ["parsing", "assets", "dump-load", "html"]

[profile.release]
lto = true
