[package]
name = "rocket"
version = "0.1.0"
authors = ["Andrew Aldridge <i80and@foxquill.com>"]

[dependencies]
bytecount = "0.2"
glob = "0.2"
handlebars = "0.29"
lazy_static = "0.2"
lazycell = "0.5"
log = "0.3"
num_cpus = "1.0"
rand = "0.3"
regex = "0.2"
scoped_threadpool = "0.1.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "0.4"
time = "0.1"
toml = "0.4"
typed-arena = "1.3"
walkdir = "2.0"

[dependencies.syntect]
version = "1.8"
default-features = false
features = ["parsing", "assets", "dump-load", "html"]

[profile.release]
lto = true
